prevent horizontal scroll at mobile

--- a/tbx/static_src/sass/components/_client-item.scss
+++ b/tbx/static_src/sass/components/_client-item.scss
@@ -138,6 +138,8 @@
 
     // nesting necessary to override default streamfield styling
     .streamfield & {
+        padding: 0;
+
         &::before {
             content: none; // don't show li arrow
         }
